Adds cache for listeners, clears sonar warnings and updates dependencies versions